--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="RtlSymmetry">
+<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    tools:ignore="RtlSymmetry">-->
 
 
-    <data>
+<!--    <data>-->
 
-        <variable
-            name="vm"
-            type="com.htcy.wanandroid.ui.page.LoginFragment.LoginStates" />
+<!--        <variable-->
+<!--            name="vm"-->
+<!--            type="com.htcy.wanandroid.ui.page.LoginFragment.LoginStates" />-->
 
 <!--        <variable-->
 <!--            name="click"-->
-<!--            type="com.kunminx.puremusic.ui.page.LoginFragment.ClickProxy" />-->
+<!--            type="com.htcy.wanandroid.ui.page.LoginFragment.ClickProxy" />-->
 
-    </data>
+<!--    </data>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="RtlSymmetry"
         android:orientation="vertical">
 
         <LinearLayout
@@ -89,4 +93,4 @@
             app:sv_bindEditText2="@+id/piv_login_password" />
 
     </RelativeLayout>
-</layout>
+<!--</layout>-->
