--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+
+    <data>
+
+        <variable
+            name="vm"
+            type="com.htcy.wanandroid.ui.page.RegisterFragment.RegisterStates" />
+
+        <variable
+            name="click"
+            type="com.htcy.wanandroid.ui.page.LoginFragment.ClickProxy" />
+
+    </data>
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -83,3 +98,5 @@
         app:sv_bindEditText3="@+id/piv_register_password_again" />
 
 </RelativeLayout>
+
+</layout>
