--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    tools:ignore="RtlSymmetry">-->
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="RtlSymmetry">
 
+    <data>
+        <variable
+            name="vm"
+            type="com.htcy.wanandroid.ui.page.LoginFragment.LoginStates" />
 
-<!--    <data>-->
+        <variable
+            name="click"
+            type="com.htcy.wanandroid.ui.page.LoginFragment.ClickProxy" />
 
-<!--        <variable-->
-<!--            name="vm"-->
-<!--            type="com.htcy.wanandroid.ui.page.LoginFragment.LoginStates" />-->
-
-<!--        <variable-->
-<!--            name="click"-->
-<!--            type="com.htcy.wanandroid.ui.page.LoginFragment.ClickProxy" />-->
-
-<!--    </data>-->
+    </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="RtlSymmetry"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="RtlSymmetry">
 
         <LinearLayout
             android:id="@+id/ll_go_register"
@@ -93,4 +88,5 @@
             app:sv_bindEditText2="@+id/piv_login_password" />
 
     </RelativeLayout>
-<!--</layout>-->
+
+</layout>
